# hidapi

./: .travis.yml  meson.build
hidapi/: hidapi.h
libusb/: Makefile.am  hid.c
